--- a/style.css
+++ b/style.css
@@ -102,17 +102,33 @@ nav {
   background-color: transparent;
   margin-right: 15px;
 }
-
 .nav-marquee {
+  width: 100%;
+  overflow: hidden;
+  background-color: #fff; /* Optional: background color */
+  border: none; /* Optional: border around the marquee */
   display: flex;
   justify-content: flex-end;
 }
 
 .nav-para {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 100%; /* Start the text outside the container */
+  animation: marquee 10s linear infinite;
   font-size: 10px;
   justify-content: flex-end;
   color: #808080;
   letter-spacing: -3.5%;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 .burger {
